minor (#88): Added date, ip and url to `ping` in Phoenix backend
